c/src/test/resources/c/test/nec_bnc/valid/ex18-100.ctrl
<controlFile>
  <sourceFile name="../ex18.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <wayPoint fileId="1" line="10" >
      <command>
	<cascadeFunction>cascade_assume</cascadeFunction>
	<argument><![CDATA[
	a != 0 && k == 100
	]]>
	</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="15" >
      <loop iterTimes="100" />
    </wayPoint>
    <wayPoint fileId="1" line="18" >
      <command>
	<cascadeFunction>cascade_check</cascadeFunction>
	<argument><![CDATA[
	forall(idx_0, implies(0 <= idx_0 && idx_0 < i, a[idx_0] > 1))
	]]></argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="20" >
      <loop iterTimes="99" />
    </wayPoint>
    <wayPoint fileId="1" line="22" >
      <command>
	<cascadeFunction>cascade_check</cascadeFunction>
	<argument><![CDATA[
	forall(idx, implies(0 <= idx && idx < i, a[idx] == a[i]))
	]]></argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="26" />
  </run>
</controlFile>
